--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ The goal of mSigHdp is to do mutational signature extraction using hdp (Hierarch
 ## Installation
 
 ### Stable version
-Download the [package source](https://raw.githubusercontent.com/steverozen/mSigHdp/master/data-raw/source-file/mSigHdp_0.0.0.9022.tar.gz?token=AKPYULDJID7QLDIJJEXSTMC64S2TS) file to your computer and install mSigHdp locally:
+Download the [package source](https://github.com/steverozen/mSigHdp/blob/master/data-raw/source-file/mSigHdp_0.0.0.9022.tar.gz?raw=true) file to your computer and install mSigHdp locally:
 
 ``` r
 install.packages(pkgs = "path-to-package-source", repos = NULL, type = "source")
