--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ The goal of mSigHdp is to do mutational signature extraction using hdp (Hierarch
 ## Installation
 
 ### Stable version
-Download the [package source](https://github.com/steverozen/mSigHdp/blob/master/data-raw/source-file/mSigHdp_0.0.0.9022.tar.gz?raw=true) file to your computer and install mSigHdp locally:
+Download the [package source](https://github.com/steverozen/mSigHdp/blob/master/data-raw/source-file/mSigHdp_0.0.0.9026.tar.gz?raw=true) file to your computer and install mSigHdp locally:
 
 ``` r
 install.packages(pkgs = "path-to-package-source", repos = NULL, type = "source")
@@ -34,13 +34,9 @@ install.packages(pkgs = "path-to-package-source", repos = NULL, type = "source")
 Install the development version of mSigHdp from [GitHub](https://github.com/) with the R command line:
 
 ``` r
-# To install from a private repo, use auth_token with a token
-# from https://github.com/settings/tokens. You only need the
-# repo scope. Best practice is to save your PAT in env var called
-# GITHUB_PAT.
-install.packages("devtools")
-devtools::install_github("steverozen/mSigHdp", auth_token = "abc")
+install.packages("remotes")
+remotes::install_github("steverozen/mSigHdp")
 ```
 ## Reference manual
 
-https://github.com/steverozen/mSigHdp/blob/master/data-raw/mSigHdp_0.0.0.9022.pdf
+https://github.com/steverozen/mSigHdp/blob/master/data-raw/mSigHdp_0.0.0.9026.pdf
