--- a/README.Rmd
+++ b/README.Rmd
@@ -24,19 +24,22 @@ The goal of mSigHdp is to do mutational signature extraction using hdp (Hierarch
 ## Installation
 
 ### Stable version
-Download the [package source](https://github.com/steverozen/mSigHdp/blob/master/data-raw/source-file/mSigHdp_0.0.0.9026.tar.gz?raw=true) file to your computer and install mSigHdp locally:
+Download the [package source](https://github.com/steverozen/mSigHdp/blob/master/data-raw/source-file/mSigHdp_1.0.2.003.tar.gz?raw=true) file to your computer and install mSigHdp locally:
 
 ``` r
-install.packages(pkgs = "path-to-package-source", repos = NULL, type = "source")
+install.packages(pkgs = "path-to-package-source-on-your-computer", repos = NULL, type = "source")
 ```
 
-### Development version
-Install the development version of mSigHdp from [GitHub](https://github.com/) with the R command line:
+### Get the development version
+
+To use new features in the development version,
+you can install mSigHdp from the master branch on [GitHub](https://github.com/),
+which may not be stable:
 
 ``` r
 install.packages("remotes")
-remotes::install_github("steverozen/mSigHdp")
+remotes::install_github(repo = "steverozen/mSigHdp", ref = "master")
 ```
 ## Reference manual
 
-https://github.com/steverozen/mSigHdp/blob/master/data-raw/mSigHdp_0.0.0.9026.pdf
+https://github.com/steverozen/mSigHdp/blob/master/data-raw/mSigHdp_1.0.2.003.pdf
