--- a/data-raw/mSigHdp_vignettes.Rmd
+++ b/data-raw/mSigHdp_vignettes.Rmd
@@ -3,7 +3,7 @@ title: "mSigHdp vignette"
 author: "ML and SGR"
 date: "06/01/2022"
 output:
-  pdf_document: default
+  html_document: default
 ---
 `
 
@@ -16,7 +16,7 @@ devtools::install_github("steverozen/mSigHdp",ref="master")
 
 # Toy dataset
 
-To illustrate the basic features of the mSigHdp package, we consider a toy dataset
+To illustrate the basic features of the mSigHdp package, we consider a toy data set
 of categorical count data with **10 samples** (rows) and **96 categories** (columns). 
 The **10 samples** are PCAWG platinum tumors
 
@@ -25,17 +25,18 @@ library(mSigHdp)
 toy_data <- ICAMS::ReadCatalog("toy_data.csv")
 ```
 
-Runhdpxparallel
+Run Runhdpxparallel to extract signatures from toy data set.
+We set the num.child.process and CPU.cores to 4 for a quick run. We recommend num.child.process and CPU.cores set to 20 for real data.
 There are three checkpoint arguments: checkpoint.chlist to checkpoint the chlist to "initial.chlist.Rdata" in the current working directory. checkpoint.1.chain to checkpoint the sample chain to current working directory, posterior.checkpoint to checkpoint the posterior sampling after every 10 posterior samples collected.
 ```{r RunHdpxParallel,include=T,echo=TRUE}
 
 retval <- mSigHdp::RunHdpxParallel(input.catalog = toy_data,
                           out.dir                  = "vignettes",
-                          num.child.process        = 2, 
-                          CPU.cores                = 2,
+                          num.child.process        = 4, 
+                          CPU.cores                = 4,
                           seedNumber               = 123,
                           K.guess                  = 5,
-                          burnin.checkpoint        = FALSE,
+                          burnin.checkpoint        = T,
                           burnin                   = 100, 
                           
                           burnin.multiplier        = 2,
@@ -54,15 +55,76 @@ retval <- mSigHdp::RunHdpxParallel(input.catalog = toy_data,
                           posterior.checkpoint     = T) 
 
 ```
+
+We can also extend burn-ins from checkpoints.
+
+```{r}
+load("burnin.checkpoint.1000123.Rdata")
+retval <- mSigHdp::ExtendBurnin(hdplist = burnin.output$hdplist,
+                                seedNumber = 123,
+                                burnin = 100)
+```
+
+
+We can also continue Gibbs sampling from current checkpoints
+
+```{r}
+load("posterior.checkpoint.1000123.Rdata")
+retval <- hdpx::hdp_posterior_sample(post.input = ans,post.n = 10,post.space = 5,seed=100123)
+```
+
+
 Results
 
 There are several outputs in the out.dir (in this vignettes, we saved outputs to data-raw/vignettes)
 
--extracted.signatures.csv
+-extracted.signatures.csv and extracted.signatures.pdf
+
+These two files are profiles and visualization of extracted signatures.
+
+-extracted.signatures.post.samp.number.csv 
+
+A csv file with two columns. The first column contains the signature names correspond to extracted.signatures.csv, the second column contains the number of posterior samples extracted the corresponding signature.
+
+-inferred.exposures.csv
+
+Exposures inferred from HDP. Because there is no sparsity constraints of assignment in HDP. We recommend to use a signature assignment program to re-analyze the exposure, e.g. mSigAct, MutationalPatterns..
+
+-inferred.exposure.count.pdf and inferred.exposure.proportion.pdf
+
+Barplots of the counts and exposures of extracted signatures in each tumor
+
+-low.confidence.signatures.csv 
+
+The profiles of extracted signatures with low confidence (i.e. the proportion of posterior samples with these signatures is less than pre-defined high.confidence.prop in RunHdpxParallel).
+
+-low.confidence.signatures.post.sample.number.csv 
+
+A csv file with two columns. The first column contains the signature names correspond to low.confidence.signatures.csv, the second column contains the number of posterior samples extracted the corresponding signature.
 
 
 ```{r Diagnostic likelihood plot,echo=F}
-knitr::include_graphics("vignettes/Diagnostic_Plots/diagnostics.likelihood.pdf")
+knitr::include_graphics("vignettes/Diagnostic_Plots/diagnostics_likelihood.pdf")
 
 ```
 
+
+```{r Diagnostic number of clusters plot,echo=F}
+knitr::include_graphics("vignettes/Diagnostic_Plots/diagnostics_numcluster.pdf")
+
+```
+
+```{r Diagnostic signatures plot,echo=F}
+knitr::include_graphics("vignettes/Diagnostic_Plots/diagnostics_signatures.pdf")
+
+```
+
+```{r Diagnostic extraction in gibbs sampling plot,echo=F}
+knitr::include_graphics("vignettes/Diagnostic_Plots/diagnostics_component_distribution_in_posterior_samples.pdf")
+
+```
+
+```{r Diagnostic example tumors for each signature plot,echo=F}
+knitr::include_graphics("vignettes/Diagnostic_Plots/diagnostics_hdp_signature_exposure_each_sample.pdf")
+
+```
