--- a/README.Rmd
+++ b/README.Rmd
@@ -13,19 +13,15 @@ knitr::opts_chunk$set(
 
 # mSigHdp
 
-<!-- badges: start -->
-[![Travis build status](https://travis-ci.com/steverozen/mSigHdp.svg?token=4tzsJkhpLqWUuJC1zszF&branch=master)](https://travis-ci.com/steverozen/mSigHdp)
-<!-- badges: end -->
-
 The goal of mSigHdp is to do mutational signature extraction using hdp (Hierarchical Dirichlet Process).
 
 ## Installation
 
-### Stable version
-Download the [package source](https://github.com/steverozen/mSigHdp/blob/master/data-raw/source-file/mSigHdp_1.0.2.003.tar.gz?raw=true) file to your computer and install mSigHdp locally:
+### Latest stable version
 
 ``` r
-install.packages(pkgs = "path-to-package-source-on-your-computer", repos = NULL, type = "source")
+install.packages("remotes")
+remotes::install_github(repo = "steverozen/mSigHdp")
 ```
 
 ### Get the development version
@@ -40,4 +36,4 @@ remotes::install_github(repo = "steverozen/mSigHdp", ref = "master")
 ```
 ## Reference manual
 
-https://github.com/steverozen/mSigHdp/blob/master/data-raw/mSigHdp_1.0.2.003.pdf
+https://github.com/steverozen/mSigHdp/blob/v1.1.7-branch/mSigHdp_1.1.2001.pdf
