--- a/vignettes/mSigHdp.Rmd
+++ b/vignettes/mSigHdp.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(mSigHdp)
 library(ICAMS)
+library(cosmicsig)
 ```
 
 mSigHdp uses hierarchical Dirichlet process mixture modeling
@@ -27,43 +28,50 @@ classification of single-base-substitution (SBS) mutations in 96 types.
 We generate the synthetic spectra based on two mutational
 signatures, SBS1 and SBS22. We get the signatures from CRAN package,
 which provides signatures from https://cancer.sanger.ac.uk/signatures/.
-We set a specific seed so the synthetic spectra are the 
+We set a specific seed so that the synthetic spectra are the 
 same every time we run the vignette.
 
 
 ```{r get_spectra}
 sigs <- cosmicsig::COSMIC_v3.2$signature$GRCh37$SBS96[  , c("SBS1", "SBS22")]
 set.seed(2022)
+```
+
+We generate 10 random exposures and 2 highly-enriched exposures for
+each signature (so we can discover them quickly),
+and make them into an exposure matrix.
+
+```{r get_spectra2}
 n.tumor <- 10
-
-# Exposures to SBS1
 exposures1 <- c(rnbinom(n.tumor, mu = 2000, size = 5), 10000, 100)
-
-# Exposures to SBS22
 exposures2 <- c(rnbinom(n.tumor, mu = 10000, size = 1000), 100, 5000)
-
 exposures <- rbind(exposures1, exposures2)
+```
 
-# Create the matrix, give column names (sample names), and
-# make it an ICAMS catalog to enable better plotting later
+Then we generate spectra by multiplying the signatures times the
+exposures and rounding, because we need integer mutation counts.
+We convert the matrix into an ICAMS catalog so we can use custom plotting later.
+
+```{r get_spectra3}
 toy_data <- round(sigs %*% exposures)
 colnames(toy_data) <- paste("T", 1:(n.tumor + 2), sep="")
 toy_data <- ICAMS::as.catalog(toy_data, catalog.type = "counts")
 ```
 
-Here are the first few and last few rows of the 12 spectra:
+Here are the first few and last few rows of the 12 spectra.
+Each column is one of the 12 synthetic tumors.
+Each row is a mutation type, for example in in row 5
+the row name CCAA indicates a mutation from CCA to CAA.
 
 ```{r show_spectra}
 knitr::kable(toy_data[1:5,  ])
 knitr::kable(toy_data[91:96, ])
 ```
 
-RunHdxParallel is the function most people will want to use.
-Most of the parameters in the example here are not suitable for real data.
+Must people will want to use the `RunHdxParallel` function.
+*Most of the parameters in the example here are not suitable for real data*.
 Please see our paper to be posted on bioRxiv soon for suggestions
-for actual values to use.  In particular, here we set
-CPU.cores to 1 because some package checking does not allow
-use of multiple cores.
+for actual values to use.
 
 ```{r RunHdpxParallel}
 
@@ -71,7 +79,7 @@ retval <- mSigHdp::RunHdpxParallel(
   input.catalog        = toy_data,
   out.dir              = "vignette_output",
   num.child.process    = 4, 
-  CPU.cores            = 1,
+  CPU.cores            = 4,
   seedNumber           = 123,
   K.guess              = 5,
   burnin               = 100,
@@ -87,11 +95,31 @@ retval <- mSigHdp::RunHdpxParallel(
   verbose              = FALSE) 
 ```
 
-The output is in subdirectory vignette_output. 
-A plot of the extracted (discovered) signatures is
-in file extracted.signatures.pdf.
+The results are in both `retval` and in subdirectory `vignette_output`,
+which also contains plots of the output and diagnostic plots. 
+It is convenient to automatically save the results to files
+since the program will likely have been running for days, and you will
+likely want to save the outputs to files in any case.
+The return value of `RunHdpParallel` will be included in the
+directory in binary form as `hdp.retval.Rdata`.
+
+The directory contains a plot of the extracted (discovered) signatures
+in file `extracted.signatures.pdf`.
 
 ```{r sigplot, out.width="100%", out.height="50%", echo=F}
 knitr::include_graphics("vignette_output/extracted.signatures.pdf")
 ```
+
+The signatures in numerical form are in file `extracted.signatures.csv`.
+
+```{r extracted_sigs}
+# dir()
+# dir("vignette_output")
+extracted.sigs <- ICAMS::ReadCatalog("vignette_output/extracted.signatures.csv")
+knitr::kable(extracted.sigs[1:10, ])
+
+```
+
+
+
 
