--- a/vignettes/mSigHdp.Rmd
+++ b/vignettes/mSigHdp.Rmd
@@ -25,7 +25,15 @@ to discover mutational signatures.
 For real data this is very compute intensive, 
 so here we will show only a toy example with tumors and the typical
 classification of single-base-substitution (SBS) mutations in 96 types. 
-We generate the synthetic spectra based on two mutational
+
+For information on using mSigHdp on realistically sized input, please
+see Mo Liu, Yang Wu, Nanhai Jiang, Arnoud Boot, Steven G. Rozen,
+*mSigHdp: hierarchical Dirichlet process mixture modeling 
+for mutational signature discovery*, 
+https://www.biorxiv.org/content/10.1101/2022.01.31.478587v1.
+
+For the toy data in this vignette, 
+we generate the synthetic spectra from two mutational
 signatures, SBS1 and SBS22. We get the signatures from CRAN package
 cosmicsig, which provides signatures from https://cancer.sanger.ac.uk/signatures/.
 We set a specific seed so that the synthetic spectra are the 
