--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 
 # mSigHdp
 
-The goal of mSigHdp is to do mutational signature extraction using the hdpx package This branch of
+This package extracts mutational signatures using the hdpx package This branch of
 mSigHdp depends on a branch of hdpx that was forked from Nicola Roberts's hdp package, and that
 still implements the algorithm from
 Section 4.2.2, "Extracting Consensus Signatures" from
@@ -26,7 +26,25 @@ We do not recommend using this version.
 
 ## Installation
 
+*This version _must_ use hdpx branch `NR-version-plus-fixes*.
+
+
 ``` r
+# Always install the version of hdpx and mSigHdp with the Nicola
+# Roberts algorithm for combining raw clusters into signatures
+hdpx.version <- "0.1.5.0099"
+if (system.file(package = "hdpx") != "") {
+  if (packageVersion("hdpx") != hdpx.version) {
+    remove.packages("hdpx")
+    remotes::install_github("steverozen/hdpx", ref = "NR-version-plus-fixes")
+  }
+} else {
+  remotes::install_github("steverozen/hdpx", ref = "NR-version-plus-fixes")
+}
+message("hdpx version ", packageVersion("hdpx"))
+stopifnot(packageVersion("hdpx") == hdpx.version)
+
+
 mSigHdp.version <- "0.0.0.9019"
 if (system.file(package = "mSigHdp") != "") {
   if (packageVersion("mSigHdp") != mSigHdp.version) {
