--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ We do not recommend using this version.
 
 ## Installation
 
-*This version _must_ use hdpx branch `NR-version-plus-fixes*.
+*This version _must_ use hdpx branch NR-version-plus-fixes*.
 
 
 ``` r
